@@ -2,12 +2,10 @@
 
 A modular JavaFX pinball game framework inspired by Windows XP Space Cadet. This project is structured to support a mixed workflow where one developer focuses on code-only components and others build UI with FXML.
 
-## Package Layout
-
-- `com.pinball.core`: Interfaces for physics and game loop coordination.
-- `com.pinball.ui`: Canvas rendering and FXML controllers.
-- `com.pinball.model`: Data classes for game objects.
-
 ## Build
 
 This project uses Maven with JavaFX 21+ dependencies for controls, FXML, and media.
+
+## How to start
+
+run PinballApp.java with arg '--add-modules javafx.controls,javafx.media,javafx.graphics'
